# 2048-cli-debug

./: .envrc  .gitignore  2048-cli-technical-guide.md  2048-cli-technical-guide.org  ARCHITECTURE.md  ARCHITECTURE.org  CONTRIBUTING.md  CONTRIBUTING.org  LICENSE  Makefile  README.md  README.org  board_test.txt  claude_actually_plays.sh  claude_aims_for_2000.exp  claude_analyzes_552.py  claude_interactive.py  claude_just_play.py  claude_live_analysis.py  claude_play_from_existing.py  claude_plays_interactively.py  claude_plays_with_expect.exp  claude_sends_j.py  claude_strategic_play.py  claude_takeover.sh  claude_takes_over_when_difficult.exp  claude_with_expect.exp  complex_board.txt  core_dump_restoration.md  debug_spam.py  debugger_tty_bridge.sh  down_right_spam.sh  experiments.org  issue_alignment.md  lldb_controller.py  lldb_manual_session.txt  lldb_memory_persistence.md  lldb_session_log.md  lldb_spam_moves.sh  main.py  (+7 more)
.claude/: claude.md  settings.local.json
2048-cli-0.9.1/: .dir-locals.el  2048-analysis.el  2048-lldb.el  2048-mode.el  DEBUG-README.md  Makefile  WASM-README.md  debug-automated.lldb  debug-commands.lldb  debug-demo.sh  debug-interactive.lldb  debug-symbols.lldb  debug.lldb  decode_grid.py  exp_009_results.csv  game-ai-output.txt  game-demo.sh  game-output.txt  game-screenshot.txt  screen-capture.sh  setup-wasm.sh
docs/: claude_player_notes.md  claude_player_notes.org  cleanup-status-2025-06-25.org  experimental-framework-setup.md  experimental-framework-setup.org  experimental-methodology.org  experimental_journal.md  experimental_journal.org  (+19 more)
(+144 files in other folders)
