[project]
name = "tty-2048-controller"
version = "0.1.0"
description = "TTY-based controller for 2048 CLI game with manual inspection points"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.1",
]

[project.scripts]
tty-reader = "tty_manual.tty_reader:main"
board-analyzer = "tty_manual.board_analyzer:main"
manual-test = "tty_manual.manual_test_runner:main"
